Set innerHTML of episodesList
setHTML() is not currently supported in Safari

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 </div>
             `).join('\n')
                     
-        episodesList.setHTML(getEpisodes(episodes))
+        episodesList.innerHTML = getEpisodes(episodes)
         </script>
     <script>
         episodesList.addEventListener('click', (event) =>
